tests/paczka1/small_fuzzy/21854655.err
Error in line 6: KI4ERÞi A674 77,8
Error in line 10: KI4ERei A674 101,1
Error in line 16: H8kapp A906 156,24
